    * Add Net::SSLeay::EVP class.
    * Add Net::SSLeay::EVP#get_digestbyname method.
    * Add Net::SSLeay::X509#digest method.
    * Add Net::SSLeay::X509#pubkey_digest method.
    * Add Net::SSLeay#get_certificate method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#set_flags method.
    * Add Net::SSLeay::EVP_PKEY class.
    * Add Net::SSLeay::EVP_PKEY#DESTROY method.
0.010 2024-11-11
  [New Features]
    * Add Net::SSLeay::BIO#new_file method.
    * Add Net::SSLeay::DH class.
    * Add Net::SSLeay::PEM#read_bio_DHparams method.
    * Add Net::SSLeay#get_servername method.
    * Add Net::SSLeay::SSL_CTX#set_alpn_protos method.
    * Add Net::SSLeay::EC_KEY class.
    * Add Net::SSLeay::SSL_CTX#set_tmp_ecdh method.
    * Add Net::SSLeay::SSL_CTX#set1_groups_list method.
    * Add Net::SSLeay::SSL_CTX#set1_curves_list method.
    * Add Net::SSLeay#set_tlsext_status_type method.
    * Add Net::SSLeay#alert_desc_string_long method.
    * Add Net::SSLeay::EC_KEY#free method.
    * Add Net::SSLeay::EC_KEY#new_by_curve_name method.
    * Add Net::SSLeay#set_SSL_CTX method.
    * Add Net::SSLeay#get_mode method.
    * Add Net::SSLeay#set_mode method.
    * Add Net::SSLeay#clear_mode method.
    * Add Net::SSLeay#get_mode method.
    * Add Net::SSLeay#set_mode method.
    * Add Net::SSLeay#clear_mode method.
    * Add Net::SSLeay#version method.
    * Add Net::SSLeay::DH#DESTROY method.
    * Add Net::SSLeay::SSL_SESSION class.
    * Add Net::SSLeay::SSL_SESSION#DESTROY method.
    * Add Net::SSLeay#session_reused method.
    * Add Net::SSLeay::CIPHER class.
    * Add Net::SSLeay#get_cipher method.
    * Add Net::SSLeay#get_peer_certificate method.
    * Add Net::SSLeay#library_init method.
    * Add Net::SSLeay::OPENSSL class.
    * Add Net::SSLeay::OPENSSL#add_ssl_algorithms method.
    * Add Net::SSLeay::OPENSSL#add_all_algorithms method.
    * Add Net::SSLeay#get_shutdown method.
    * Add Net::SSLeay#pending method.
    * Add Net::SSLeay#load_error_strings method.